--- a/aula1106/login.html
+++ b/aula1106/login.html
@@ -12,7 +12,7 @@
 	<link href="dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body style="background-image: url(https://static3.tcdn.com.br/img/img_prod/580806/180_papel_de_parede_escamas_3035_1_20171024135237.jpg);">
+<body style="background-image: url(https://i.pinimg.com/originals/1a/eb/a4/1aeba46cc0d03cd8a5a91bd1ef3878e4.jpg);" >
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="#">Estagiárias</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,7 +25,7 @@
 					<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="login.html">Login</a>
+					<a class="nav-link" href="#">Login</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link disabled" href="cadastro.html">Cadastro</a>
@@ -37,30 +37,27 @@
 			</form>
 		</div>
 	</nav>
-	<div class="topo">
-		<div class="row justify-content-center">
-			<img class="my-5" src="img/logo.png">		
-		</div>
-
-	</div>
-	<div class="Conteudo my-3">
-		<div class="row justify-content-center">
-			<div class="card" style="width: 30rem;">
-				<img class="card-img-top" src="img/anitta.jpg" alt="Card image cap">
-				<div class="card-body">
-					<p class="card-text">Anitta solta a franga em show, Festa do Pião, em Barretos !</p>
-				</div>
+	<div class="container">
+		<div class="py-5 text-center">
+			<div class="row justify-content-center">
+				<form class="form-signin">
+					<img class="mb-4" src="../../assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+					<h1 class="h3 mb-3 font-weight-normal">Faça o seu Login</h1>
+					<label for="inputEmail" class="sr-only">E-mail</label>
+					<input type="email" id="inputEmail" class="form-control" placeholder="E-mail" required autofocus>
+					<label for="inputPassword" class="sr-only">Senha</label>
+					<input type="password" id="inputPassword" class="form-control" placeholder="Senha" required>
+					<div class="checkbox mb-3">
+						<label>
+							<input type="checkbox" value="remember-me"> Lembrar-me
+						</label>
+					</div>
+					<button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
+					<p class="mt-5 mb-3 text-muted">&copy; Laura-Rafa</p>
+				</form>
 			</div>
-			<div class="card" style="width: 30rem;">
-				<img class="card-img-top" src="img/ivete.jpg" alt="Card image cap">
-				<div class="card-body">
-					<p class="card-text">Ivete Sangalo e o seu bom-humor, encanta a noite no The Voice.</p>
-				</div>
-			</div>
-			
 		</div>
 	</div>
-	
 	<!-- Seu código vai aqui! -->
 
 
