--- a/aula1106/login.html
+++ b/aula1106/login.html
@@ -12,7 +12,7 @@
 	<link href="dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body style="background-image: url(https://i.pinimg.com/originals/1a/eb/a4/1aeba46cc0d03cd8a5a91bd1ef3878e4.jpg);" >
+<body style="background: url(https://i.pinimg.com/originals/e8/29/86/e829860f4d0e62cf61c596a0f5f354e9.jpg);">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="#">Estagiárias</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
