--- a/aula1106/index.html
+++ b/aula1106/index.html
@@ -12,7 +12,7 @@
 	<link href="dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body style="background-image: url(https://static3.tcdn.com.br/img/img_prod/580806/180_papel_de_parede_escamas_3035_1_20171024135237.jpg);">
+<body style="background: url(https://i.pinimg.com/originals/c6/b7/3e/c6b73e73b6d34b736a63062e1a64837f.jpg);">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="#">Estagiárias</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,6 +30,9 @@
 				<li class="nav-item">
 					<a class="nav-link disabled" href="cadastro.html">Cadastro</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link disabled" href="nos.html">Quem somos nós</a>
+				</li>
 			</ul>
 			<form class="form-inline my-2 my-lg-0">
 				<input class="form-control mr-sm-2" type="search" placeholder="Busca">
@@ -37,30 +40,36 @@
 			</form>
 		</div>
 	</nav>
+
 	<div class="topo">
 		<div class="row justify-content-center">
 			<img class="my-5" src="img/logo.png">		
 		</div>
 
 	</div>
-	<div class="Conteudo my-3">
-		<div class="row justify-content-center">
-			<div class="card" style="width: 30rem;">
-				<img class="card-img-top" src="img/anitta.jpg" alt="Card image cap">
-				<div class="card-body">
-					<p class="card-text">Anitta solta a franga em show, Festa do Pião, em Barretos !</p>
+	<div class="row justify-content-center">
+		<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img class="d-block w-90" src="img/ney.jpg" alt="First slide">
+				</div>
+				<div class="carousel-item">
+					<img class="d-block w-90" src="img/ivete.jpg" alt="Second slide">
+				</div>
+				<div class="carousel-item">
+					<img class="d-block w-90" src="img/anitta.jpg" alt="Third slide">
 				</div>
 			</div>
-			<div class="card" style="width: 30rem;">
-				<img class="card-img-top" src="img/ivete.jpg" alt="Card image cap">
-				<div class="card-body">
-					<p class="card-text">Ivete Sangalo e o seu bom-humor, encanta a noite no The Voice.</p>
-				</div>
-			</div>
-			
+			<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
 		</div>
 	</div>
-	
 	<!-- Seu código vai aqui! -->
 
 
