Signed-off-by: rafacvoltatorne <barbosarafaela584@gmail.com>

--- a/aula1106/nos.html
+++ b/aula1106/nos.html
@@ -47,13 +47,13 @@
 			<div class="card" style="width: 50rem;">
 				<img class="card-img-top" src="img/raura.jpg" alt="Card image cap">
 				<div class="card-body">
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					<p class="card-text">Meu nome é Laura e eu sou uma das estágiárias do blog. Tenho 15 anos e faço TII no IFSP Campûs São Carlos. Fizemos este blog para um dos trabalhos de nosso curso. Esperamos que gostem e se divirtam! Para me encontrar me siga nas redes sociais: Instagram:laurapires.6 Facebook:Laura Okuha Pìres <3</p>
 				</div>
 			</div>
 			<div class="card" style="width: 50rem;">
 				<img class="card-img-top" src="img/rafa.jpg" alt="Card image cap">
 				<div class="card-body">
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					<p class="card-text">Me chamo Rafaela e eu sou uma das estagiárias do blog (amiga da Laura). Tenho 15 anos e faço TII, no IFSP campûs São Carlos, na mesma sala. Aqui você encontra notícias do mundo dos famosos! Divirtam-se ! Instagram:rafaelac.15 Facebook:Rafaela Barbosa . Seguem lá !</p>
 				</div>
 			</div>
 		</div>
