--- a/aula1106/index.html
+++ b/aula1106/index.html
@@ -47,27 +47,53 @@
 		</div>
 
 	</div>
-	<div class="row justify-content-center">
-		<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img class="d-block w-90" src="img/ney.jpg" alt="First slide">
-				</div>
-				<div class="carousel-item">
-					<img class="d-block w-90" src="img/ivete.jpg" alt="Second slide">
-				</div>
-				<div class="carousel-item">
-					<img class="d-block w-90" src="img/anitta.jpg" alt="Third slide">
+
+	<div class="container-fluid">
+
+		<div class="row justify-content-center">
+			<div class="col ml-4"><div class="card" style="width: 22rem; ">
+  <img class="card-img-top" src="img/harry.jpg" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Coisas que você nunca reparou nos filmes do Harry Potter</h5>
+    <p class="card-text">Em uma saga como esta, não importa quantas vezes vemos, alguns detalhes passam despercebidos</p>
+    <a href="harry.html" class="btn btn-danger">Venha conferir !</a>
+  </div>
+</div></div>
+			<div class="col">
+
+				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img class="d-block w-90" src="img/ney.jpg" alt="First slide">
+						</div>
+						<div class="carousel-item">
+							<img class="d-block w-90" src="img/ivete.jpg" alt="Second slide">
+						</div>
+						<div class="carousel-item">
+							<img class="d-block w-90" src="img/anitta.jpg" alt="Third slide">
+						</div>
+					</div>
+					<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
 				</div>
 			</div>
-			<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="sr-only">Previous</span>
-			</a>
-			<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="sr-only">Next</span>
-			</a>
+			
+			<div class="col">
+				<div class="card" style="width: 30rem;">
+  <img class="card-img-top" src="img/bruce.jpg" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Veja a transformação de Bruce Jenner !</h5>
+    <p class="card-text">Bruce fez várias cirurgias plásticas para a mudança de gênero</p>
+    <a href="bruce.html" class="btn btn-danger">Venha conferir !</a>
+  </div>
+
+			</div>
 		</div>
 	</div>
 	<!-- Seu código vai aqui! -->
